[workspace]
resolver = "2"

members = [
    "binex", 
    "crx2rnx", 
    "qc-traits", 
    "rinex", 
    "rinex-qc", 
    "rinex-cli", 
    "rnx2crx", 
    "sp3",
    "sinex",
    "ublox-rnx", 
]

exclude = [
    "./test_resources",
]

[profile.release]
strip = true
opt-level = 3
lto = "thin"
codegen-units = 1
