[package]
name = "rinex"
version = "0.17.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX file parsing, analysis and production"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/rinex"
keywords = ["geo", "gnss", "gps", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"
rust-version = "1.64"

#####################################################################
# To understand the lib features, please read the following comments.
# 
# Other features that exist:
# - log: unlocks debug traces
# - serde: internal structures serdes
#####################################################################

################################################################
# Note for devs:
#
# [Dependencies] see if we can get rid of
# - geo: either replaced by Orbit, and 3D does not exist anyway
# - wkt:
# - strum/macros
# - regex
# - num/num-integer (.div_ceil)
################################################################

[features]
default = []

# OBSERVATION RINEX Iterators & methods. Unlocks signal combinations.
obs = []

# NAVIGATION RINEX (decoded radio messages) Iterators & methods.
# Unlocks navigation calculations including Kepler solver and Ut1Provider.
nav = [
    "nalgebra",
    "anise",
]

# Provides the special UT1-TAI methods
ut1 = [
    "hifitime/ut1",
]

# METEO RINEX dedicated Iterators & methods.
meteo = []

# IONEX (special RINEX) dedicated Iterators & methods.
ionex = []

# CLOCK (Special RINEX) dedicated Iterators & methods.
clock = []

# ANTEX for accurate antenna characteristics: dedicated Iterators & methods.
antex = []

# DORIS (Special Observation RINEX) specific Iterators & methods.
doris = []

# BINEX RNX2BIN and BIN2RNX serdes
binex = [
    "dep:binex"
]

# RTCM RTCM2RNX and RNX2RTCM serdes
rtcm = [
    "dep:rtcm-rs",
]

# Unlock Quality Check and TEQC like methods & traits.
qc = [
    "dep:gnss-qc-traits", 
    "dep:maud",
] 

# Unlocks the Filter designer, pre and post processing algorithms.
processing = [
    "qc",
    "gnss-qc-traits/processing",
]

# Unlock all features, at once
full = [
    "antex",
    "clock",
    "doris",
    "flate2",
    "ionex",
    "meteo",
    "nav",
    "obs",
    "processing",
    "serde",
    "binex",
    "rtcm",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[build-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dependencies]
num = "0.4"
regex = "1"
strum = "0.26"
thiserror = "2"
lazy_static = "1.4"
num-derive = "0.4"
itertools = "0.13.0"

# Log is optional and our "debug" feature: use this if you're a dev.
# Turn this on to obtain debug traces during parsing, formatting and calculations
# Use DEBUG sensitivy for all traces.
# Use normal sensitivy for error / warning traces.
log = { version = "0.4", optional = true }

dms-coordinates = "1.3.1"
bitflags = { version = "2.3", features = ["serde"] } 
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

geo = { version = "0.28", optional = true }
wkt = { version = "0.10.0", default-features = false, optional = true }
flate2 = { version = "1", optional = true }

anise = { version = "0.5.3", optional = true }
nalgebra = { version = "0.33.0", optional = true }
hifitime = { version = "4.0.0", features = ["serde", "std"] }
gnss-rs = { version = "2.3.3", features = ["serde", "domes", "cospar"] }
gnss-qc-traits = { version = "0.1.0", features = ["html"], optional = true }

maud = { version = "0.26", optional = true }

# BINEX (serdes)
binex = { path = "../binex", version = "0.4.0", optional = true }

# RTCM (serdes)
rtcm-rs = { version = "0.11", optional = true }

# TODO: see if we can get rid of FromPrimitive ?
num-traits = "0.2.15"

# TODO: see if we can get rid of num.div_ceil() ?
num-integer = "0.1.44"

[dev-dependencies]
serde_json = "1"
criterion = "0.5"
rand = "0.8.4"
flate2 = "1"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "formatting"
harness = false

[[bench]]
name = "hatanaka"
harness = false
