[package]
name = "binex"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "BINEX Binary RINEX encoder and decoder"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["timing", "gps", "galileo", "science", "no-std"]
categories = ["science", "science::geo", "no-std"]
edition = "2021"
rust-version = "1.64"

[features]
# activate std:: support
# Provides convenient I/O stream reader
std = []

default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[dependencies]
log = "0.4"
md-5 = "0.10"
thiserror = "1"
lazy_static = "1.4"
flate2 = { version = "1.0.34", optional = true }
hifitime = { version = "4.0.0-alpha", features = ["serde", "std"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "encoding"
harness = false

[[bench]]
name = "decoding"
harness = false
