[package]
name = "crx2rnx"
version = "2.1.0"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX data decompressor"
homepage = "https://github.com/georust/rinex"
keywords = ["rinex", "compression", "decompression", "crinex"] 
categories = ["science", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
rinex = { path = "../rinex", features = ["serde"] }
