[package]
name = "ionex2kml"
version = "0.0.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "IONEX to KML converter"
homepage = "https://github.com/georust/ionex2kml"
repository = "https://github.com/georust/ionex2kml"
keywords = ["rinex", "gps", "gpx"]
categories = ["parser", "science::geo", "command-line-interface"]
edition = "2021"
readme = "README.md"

[dependencies]
log = "0.4"
kml = "0.8.3"
thiserror = "1"
pretty_env_logger = "0.5"
clap = { version = "4", features = ["derive", "color"] }
rinex = { path = "../rinex", features = ["flate2", "serde"] }
