[package]
name = "rinex-qc-traits"
version = "0.1.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX quality analysis specific traits"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "timing", "gps", "glonass", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"

[features]
default = [] # no features by default

# Unlock processing features
# - Filter designer: design and apply filter ops to GNSS datasets
processing = [
    "dep:gnss-rs",
    "dep:hifitime",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[dependencies]
thiserror = "1"
hifitime = { git = "https://github.com/nyx-space/hifitime.git", branch = "master", optional = true }
gnss-rs = { git = "https://github.com/rtk-rs/gnss", branch = "main", features = ["serde", "domes", "cospar"], optional = true }
