[package]
name = "rinex-qc-traits"
version = "0.2.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX quality analysis specific traits"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "timing", "gps", "glonass", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"

[features]
default = ["html"]

# Unlock processing features
# - Filter designer: design and apply filter ops to GNSS datasets
processing = [
    "dep:gnss-rs",
    "dep:hifitime",
]

# Unlock HTML reporting
# This is enabled by default, since HTML is our only reporting format to this day.
html = [
    "dep:maud",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[dependencies]
thiserror = "1"
maud = { version = "0.26", optional = true }
hifitime = { version = "4.0.0", optional = true }
gnss-rs = { version = "2.3.1", features = ["serde", "domes", "cospar"], optional = true }
