[package]
name = "rinex-cli"
version = "0.12.0-alpha-1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Command line tool parse and analyze RINEX data"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "gps", "glonass", "galileo", "timing"]
categories = [
    "science",
    "science::geo",
    "command-line-interface",
    "command-line-utilities",
]
edition = "2021"
readme = "README.md"
rust-version = "1.64"

[features]
default = ["csv"]

[dependencies]
log = "0.4"
walkdir = "2.5"
geo-types = "0.7.11"
env_logger = "0.11"
serde_json = "1"
lazy_static = "1.5"
thiserror = "1"
itertools = "0.13"
map_3d = "0.1.5"
maud = "0.26"

csv = { version = "1.3", optional = true }
clap = { version = "4.4.13", features = ["derive", "color"] }
serde = { version = "1", default-features = false, features = ["derive"] }

# gnss-rs = { version = "2.2.3", features = ["serde"] }
gnss-rs = { git = "https://github.com/rtk-rs/gnss", branch = "main", features = ["serde"] }

rinex = { path = "../rinex", version = "=0.17.0-alpha-1", features = ["full"] }
rinex-qc-traits = { path = "../qc-traits", version = "=0.2.1", features = ["processing"] }
rinex-qc = { path = "../rinex-qc", version = "=0.2.0-alpha-1", features = ["sp3", "flate2", "nav", "cggtts"] } 
