[package]
name = "rinex-cli"
version = "0.12.0-alpha-1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Command line tool parse and analyze RINEX data"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "gps", "glonass", "galileo", "timing"]
categories = [
    "science",
    "science::geo",
    "command-line-interface",
    "command-line-utilities",
]
edition = "2021"
readme = "README.md"
rust-version = "1.64"

[dependencies]
log = "0.4"
walkdir = "2.4.0"
geo-types = "0.7.11"
env_logger = "0.11"
serde_json = "1"
lazy_static = "1.4"
thiserror = "1"
itertools = "0.13"
map_3d = "0.1.5"
maud = "0.26"

clap = { version = "4.4.13", features = ["derive", "color"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

kml = { version = "0.8.6", optional = true }
gpx = { version = "0.10", optional = true }
csv = { version = "1.3.0", optional = true }

plotly = "0.9"
# plotly = { path = "../../plotly-rs/plotly" }
# plotly = { git = "https://github.com/gwbres/plotly", branch = "scattergeo" }

anise = { version = "0.5.2", features = ["embed_ephem"] }
hifitime = { version = "4.0.0", features = ["serde", "std"] }

gnss-rs = { version = "2.3.1", features = ["serde"] }

# gnss-rtk = { version = "=0.7.4", features = ["serde"] }
# gnss-rtk = { path = "../../rtk-rs/gnss-rtk", features = ["serde"] }
gnss-rtk = { git = "https://github.com/rtk-rs/gnss-rtk", branch = "main", features = ["serde"] }

cggtts = { version = "4.2.0", features = ["serde", "scheduler"], optional = true }
# cggtts = { path = "../../cggtts/cggtts", features = ["serde", "scheduler"], optional = true }
# cggtts = { git = "https://github.com/gwbres/cggtts", branch = "main", features = ["serde", "scheduler"], optional = true }

rinex = { path = "../rinex", version = "=0.17.0-alpha-1", features = ["full"] }
sp3 = { path = "../sp3", version = "=1.1.0-alpha-1", features = ["serde", "flate2"] }
gnss-qc = { path = "../../rtk-rs/gnss-qc/qc", version = "=0.0.1", features = ["sp3"] } 
