[package]
name = "rinex-qc"
version = "0.1.14"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX data analysis"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "timing", "gps", "glonass", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
rust-version = "1.64"

[features]
default = [] # no features by default

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[dependencies]
strum = "0.26"
statrs = "0.16"
horrorshow = "0.8"
itertools = "0.13.0"
strum_macros = "0.26"
hifitime = "4.0.0-alpha"

sp3 = { path = "../sp3", version = "=1.0.8", features = ["serde"] }
rinex-qc-traits = { path = "../qc-traits", version = "=0.1.1" }
rinex = { path = "../rinex", version = "=0.16.1", features = ["full"] }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

gnss-rs = { version = "2.2.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
