[package]
name = "rinex-qc"
version = "0.2.0-alpha"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX and more broadly, GNSS data processing"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "timing", "gnss", "gps", "glonass", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
rust-version = "1.64"

[features]
default = [] # no features by default

# Unlock support of high precision SP3 files.
# When targetting highest precision analysis and solutions, like in PPP,
# SP3 files are mandatory. When deactivated, we simply cannot load
# such files into a context, only RINEX post processing is possible.
sp3 = ["dep:sp3"]

# Unlock graphical analysis (plots rendering), otherwise reports are solely text based
# plot = [
#     "dep:plotly", 
# ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[dependencies]
log = "0.4"
maud = "0.26"
map_3d = "0.1.5"
thiserror = "1"
strum = "0.26"
itertools = "0.13.0"
strum_macros = "0.26"
anise = { version = "0.4.2", features = ["embed_ephem"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

statrs = { version = "0.16", optional = true }

# plotly = { version = "0.9", optional = true }
# plotly = { path = "../../plotly-rs/plotly", optional = true }
plotly = { git = "https://github.com/gwbres/plotly", branch = "scattergeo"} 

hifitime = "4.0.0-alpha"
gnss-rs = { version = "2.2.1", features = ["serde"] }

rinex = { path = "../rinex", version = "=0.17.0-alpha", features = ["full"] }
rinex-qc-traits = { path = "../qc-traits", version = "=0.2.0", features = ["processing"] }

sp3 = { path = "../sp3", version = "=1.1.0-alpha", features = ["qc", "processing", "serde"], optional = true }

[dev-dependencies]
serde_json = "1"
