[package]
name = "rinex-qc"
version = "0.2.0-alpha-1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX and more broadly, GNSS data processing"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "gnss", "gps", "glonass", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
rust-version = "1.64"

[features]

# Default features
#  - sp3: PPP compatible
#  - flate2: gzip support
default = [
  "sp3",
  "flate2",
]

# Support of SP3 High Precision Orbital attibutes,
# which is required by PPP high precision post processed navigation.
sp3 = ["dep:sp3"]

# flate2 features allows to stack User Data from
# .gzip compressed files natively
flate2 = [
    "sp3?/flate2",
    "rinex/flate2",
]

# Unlock graphical analysis (plots rendering), otherwise reports are solely text based
# plot = [
#     "dep:plotly", 
# ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[dependencies]
log = "0.4"
maud = "0.26"
map_3d = "0.1.5"
regex = "1"
crc32fast = "1"
thiserror = "1"
strum = "0.26"
itertools = "0.13.0"
strum_macros = "0.26"
anise = { version = "=0.4.2", features = ["embed_ephem"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

statrs = { version = "0.16", optional = true }

plotly = "0.9"
# plotly = { path = "../../plotly-rs/plotly" }
# plotly = { git = "https://github.com/gwbres/plotly", branch = "scattergeo"} 

hifitime = "4.0.0-beta"

# gnss-rs = { version = "2.2.3", features = ["serde"] }
gnss-rs = { git = "https://github.com/rtk-rs/gnss", branch = "main", features = ["serde"] }

rinex = { path = "../rinex", version = "=0.17.0-alpha-1", features = ["full"] }
rinex-qc-traits = { path = "../qc-traits", version = "=0.2.1", features = ["processing"] }

sp3 = { path = "../sp3", version = "=1.1.0-alpha-1", features = ["qc", "processing", "serde"], optional = true }

[dev-dependencies]
serde_json = "1"
