[package]
name = "rinex"
version = "0.15.5"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Package to parse and analyze RINEX data"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "timing", "gps", "glonass", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"
rust-version = "1.64"

[features]
default = [] # no features by default
sbas = ["geo", "wkt"]
obs = []
meteo = []
nav = []
ionex = []
antex = []
processing = []

# rinex Quality Check (mainly OBS RINEX) 
qc = ["rinex-qc-traits", "horrorshow"] 

# SP3 enables the RINEX context structure
sp3 = ["dep:sp3", "walkdir"] 

# enable everything
full = [
    "antex",
    "flate2",
    "horrorshow",
    "ionex",
    "meteo",
    "nav",
    "obs",
    "processing",
    "qc",
    "sbas",
    "serde",
    "sp3",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[build-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dependencies]
log = "0.4"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2.15"
regex = "1"
thiserror = "1"
bitflags = { version = "2.3", features = ["serde"] } 
lazy_static = "1.4"
map_3d = "0.1.5"
strum = "0.25"
strum_macros = "0.25"
num-integer = "0.1.44"
itertools = "0.12.0"
geo = { version = "0.27", optional = true }
wkt = { version = "0.10.0", default-features = false, optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
flate2 = { version = "1.0.24", optional = true, default-features = false, features = ["zlib"] }
hifitime = { version = "3.9.0", features = ["serde", "std"] }
horrorshow = { version = "0.8", optional = true }
gnss-rs = { version = "2.1.3", features = ["serde"] }

# RINEX QC dedicated traits
rinex-qc-traits = { path = "../qc-traits", version = "=0.1.1", optional = true }

# RINEX Context dependencies
walkdir = { version = "2.4.0", optional = true }
sp3 = { path = "../sp3", version = "=1.0.7", optional = true }

[dev-dependencies]
serde_json = "1"
criterion = "0.5"
rand = "0.8.4"

[[bench]]
name = "benchmark"
harness = false
