[package]
name = "rinex"
version = "0.16.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Package to parse and analyze RINEX data"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "timing", "gps", "glonass", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"
rust-version = "1.64"

[features]
default = []

# Unlock OBS RINEX full support.
# Unlocks dedicated browsing methods and post processing algorithms.
obs = []

# Unlock NAV RINEX full support. 
# Unlocks dedicated browsing methods and navigation dedicated methods.
nav = []

# Unlock METEO RINEX full support.
# Unlocks dedicated browsing methods and dedicated analysis.
meteo = []

# Unlock IONEX full support.
# Unlocks dedicated browsing methods and dedicated analysis.
ionex = []

# Unlock CLOCK RINEX full support.
# Unlocks dedicated browsing methods and dedicated analysis.
clock = []

# Unlock ANTEX full support.
# Unlocks dedicated browsing methods and antenna compensation methods.
antex = []

# Unlock support of DORIS RINEX file format, DORIS special measurements
# wrapped as RINEX observation file.
doris = []

# Unlock Processing package.
# Unlocks the preprocessing toolkit, Filtering methods and preprocessing algorithms.
processing = []

# Unlock Quality Check (QC) methods and traits.
# Allows to generate complete QC reports for RINEX or entire contexts.
qc = ["rinex-qc-traits", "horrorshow"] 

# Unlock SP3 support to be able to integrate SP3 precise orbits
# into a complete Context.
sp3 = ["dep:sp3", "walkdir"] 

# Unlock all features, all at once
full = [
    "antex",
    "clock",
    "doris",
    "flate2",
    "horrorshow",
    "ionex",
    "meteo",
    "nav",
    "obs",
    "processing",
    "qc",
    "serde",
    "sp3",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[build-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dependencies]
num = "0.4"
num-derive = "0.4"
num-traits = "0.2.15"
regex = "1"
thiserror = "1"
bitflags = { version = "2.3", features = ["serde"] } 
lazy_static = "1.4"
map_3d = "0.1.5"
strum = "0.26"
strum_macros = "0.26"
num-integer = "0.1.44"
itertools = "0.12.0"
geo = { version = "0.28", optional = true }
wkt = { version = "0.10.0", default-features = false, optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
flate2 = { version = "1.0.24", optional = true, default-features = false, features = ["zlib"] }
hifitime = { version = "3.9.0", features = ["serde", "std"] }
horrorshow = { version = "0.8", optional = true }
gnss-rs = { version = "2.1.3", features = ["serde"] }

# RINEX QC dedicated traits
rinex-qc-traits = { path = "../qc-traits", version = "=0.1.1", optional = true }

# RINEX Context dependencies
walkdir = { version = "2.4.0", optional = true }
sp3 = { path = "../sp3", version = "=1.0.8", optional = true }

[dev-dependencies]
serde_json = "1"
criterion = "0.5"
rand = "0.8.4"

[[bench]]
name = "benchmark"
harness = false
