[package]
name = "rinex"
version = "0.16.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Package to parse and analyze RINEX data"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "timing", "gps", "glonass", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"
rust-version = "1.64"

[features]
default = []

# Unlock OBS RINEX full support.
# Unlocks dedicated browsing methods and post processing algorithms.
obs = []

# NAV RINEX full support. 
# Unlocks BRDC calculations, including Keplerian calculations (Ephemeris),
# all NAV RINEX iteration and exploitation, including Ut1Provider.
nav = [
    "nalgebra",
    "hifitime/ut1",
]

# Unlock METEO RINEX full support.
# Unlocks dedicated browsing methods and dedicated analysis.
meteo = []

# Unlock IONEX full support.
# Unlocks dedicated browsing methods and dedicated analysis.
ionex = []

# Unlock CLOCK RINEX full support.
# Unlocks dedicated browsing methods and dedicated analysis.
clock = []

# Unlock ANTEX full support.
# Unlocks dedicated browsing methods and antenna compensation methods.
antex = []

# Unlock support of DORIS RINEX file format, DORIS special measurements
# wrapped as RINEX observation file.
doris = []

# Unlock Quality Check (QC) methods and traits.
# Allows to generate complete QC reports for RINEX or entire contexts.
qc = [
    "maud",
    "rinex-qc-traits", 
] 

# Unlock Processing package.
# Unlocks the preprocessing toolkit, Filtering methods and preprocessing algorithms.
processing = [
    "rinex-qc-traits/processing",
]

# Unlock all features, all at once
full = [
    "antex",
    "clock",
    "doris",
    "flate2",
    "ionex",
    "meteo",
    "nav",
    "obs",
    "processing",
    "qc",
    "serde",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[build-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dependencies]
log = "0.4"
num = "0.4"
regex = "1"
strum = "0.26"
thiserror = "1"
lazy_static = "1.4"
map_3d = "0.1.5"
num-derive = "0.4"
num-traits = "0.2.15"
itertools = "0.13.0"
strum_macros = "0.26"
num-integer = "0.1.44"

dms-coordinates = "1.3.1"
bitflags = { version = "2.3", features = ["serde"] } 
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
flate2 = { version = "1.0.24", optional = true, default-features = false, features = ["zlib"] }

geo = { version = "0.28", optional = true }
wkt = { version = "0.10.0", default-features = false, optional = true }

# anise = "0.4.1"
nalgebra = { version = "0.32.3", optional = true }
hifitime = { version = "4.0.0-alpha", features = ["serde", "std"] }

gnss-rs = { version = "2.2.1", features = ["serde", "domes", "cospar"] }

# RINEX QC dedicated traits
maud = { version = "0.26", optional = true }
rinex-qc-traits = { path = "../qc-traits", version = "=0.1.1", optional = true }

[dev-dependencies]
serde_json = "1"
criterion = "0.5"
rand = "0.8.4"

[[bench]]
name = "benchmark"
harness = false
