[build-system]
requires = ["maturin>=0.14"]
build-backend = "maturin"

[project]
name = "rinex"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License"
]

