[package]
name = "rnx2bin"
version = "0.0.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX to BINEX conversion"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "compression", "crinex"] 
categories = ["science", "science::geo", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies]
thiserror = "2"
flate2 = "1"
clap = { version = "4.4.13", features = ["derive", "color"] }
binex = { path = "../binex", version = "=0.4.0" }
rinex = { path = "../rinex", version = "=0.17.0-alpha-1", features = ["flate2", "binex"] }
