[package]
name = "rnx2cggtts"
version = "0.0.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "CGGTTS data generation from RINEX"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "timing", "gps"] 
categories = ["science", "science::geo", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies]
log = "0.4"
rand = "0.8"
chrono = "0.4"
thiserror = "1"
env_logger = "0.10"
clap = { version = "4", features = ["derive", "color"] }
rinex = { path = "../rinex", version = "=0.15.0", features = ["serde"] }
cggtts = { version = "3.2.2", features = ["serde"] }
gnss-rtk = { path = "../gnss-rtk", version = "=0.1.0", features = ["serde"] }
plotly = { git = "https://github.com/gwbres/plotly", branch = "density-mapbox" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
