[package]
name = "rnx2cggtts"
version = "0.0.1"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "CGGTTS data generation from RINEX"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "timing", "gps"] 
categories = ["science", "science::geo", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies]
log = "0.4"
chrono = "0.4"
thiserror = "1"
walkdir = "2.4.0"
serde_json = "1"
statrs = "0.16"
map_3d = "0.1.5"
env_logger = "0.10"
clap = { version = "4", features = ["derive", "color"] }
rinex = { path = "../rinex", version = "=0.15.0", features = ["serde"] }
cggtts = { path = "../../cggtts/cggtts", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
gnss-rtk = { path = "../../rtk-rs/gnss-rtk", features = ["serde"] }
# gnss-rtk = { git = "https://github.com/rtk-rs/gnss-rtk", branch = "main", features = ["serde"] }
