[package]
name = "rnx2cggtts"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "CGGTTS data generation from RINEX"
homepage = "https://github.com/georust/rinex"
repository = "https://github.com/georust/rinex"
keywords = ["rinex", "timing", "gps"] 
categories = ["science", "science::geo", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies]
log = "0.4"
chrono = "0.4"
thiserror = "1"
walkdir = "2.4.0"
serde_json = "1"
# statrs = "0.16"
map_3d = "0.1.5"
env_logger = "0.10"
gnss-rs = { version = "2.1.2" , features = ["serde"] }
clap = { version = "4", features = ["derive", "color"] }
rinex = { path = "../rinex", version = "=0.15.0", features = ["serde"] }
ggtts = { git = "https://github.com/gwbres/cggtts", branch = "develop", features = ["serde", "scheduler"] }
# cggtts = { path = "../../cggtts/cggtts", features = ["serde", "scheduler"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
gnss-rtk = { git = "https://github.com/rtk-rs/gnss-rtk", branch = "develop", features = ["serde"] }
# gnss-rtk = { path = "../../rtk-rs/gnss-rtk", features = ["serde"] }
