[package]
name = "rnx2crx"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "RINEX data compressor"
homepage = "https://github.com/gwbres/rinex"
keywords = ["rinex", "compression", "crinex"] 
categories = ["science", "command-line-interface", "command-line-utilities"]
edition = "2021"
readme = "README.md"

[dependencies]
chrono = "0.4"
thiserror = "1"
clap = { version = "4", features = ["derive", "color"] }
rinex = { path = "../rinex", features = ["serde"] }
